--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -141,7 +141,11 @@
                               <a href="#">Create With AI</a>
                            </li>
                            <li>
-                              <a href="#" class="active-sublist">Create New</a>
+                              <a
+                                 href="create-product.html"
+                                 class="active-sublist"
+                                 >Create New</a
+                              >
                            </li>
                            <li>
                               <a href="#">View All</a>
