--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -148,7 +148,7 @@
                               >
                            </li>
                            <li>
-                              <a href="#">View All</a>
+                              <a href="all-products.html">View All</a>
                            </li>
                            <li>
                               <a href="#">Products Images</a>
