--- a/main-files/dashboard/all-products.html
+++ b/main-files/dashboard/all-products.html
@@ -34,7 +34,7 @@
       <!--<< Main.css >>-->
       <link rel="stylesheet" href="assets/css/main.css" />
    </head>
-   <body style="font-family: var(--inter)">
+   <body>
       <!-- Preloader Start -->
       <div id="preloader" class="preloader">
          <div class="animation-preloader">
@@ -375,7 +375,45 @@
             <!-- main Content started -->
             <div class="main-content all-products">
                <!--  -->
+               <div
+                  class="all-products-header d-flex align-items-center justify-content-between"
+               >
+                  <h4>All Products Name & Price</h4>
+                  <div class="d-flex align-items-center gap-2">
+                     <select
+                        class="form-select"
+                        aria-label="Default select example"
+                     >
+                        <option value="1">Today</option>
+                        <option value="2">This Week</option>
+                        <option value="3">Last Week</option>
+                        <option value="3">Month</option>
+                     </select>
+                     <button class="add-product-button">Add Product</button>
+                  </div>
+               </div>
                <!--  -->
+               <div class="table-responsive all-products-table">
+                  <table class="table table-striped">
+                     <thead>
+                        <tr>
+                           <td>
+                              <input
+                                 type="checkbox"
+                                 name="select"
+                                 id="select"
+                              />
+                              Product Name
+                           </td>
+                           <td>Price</td>
+                           <td>Stock</td>
+                           <td>Category</td>
+                           <td>Rating</td>
+                           <td>Action</td>
+                        </tr>
+                     </thead>
+                  </table>
+               </div>
             </div>
          </div>
 
